updata swagger documentation
