# src/routes/index.routes.ts
@@ -20,10 +20,10 @@ const router = Router();
 router.get('/cards', getCards);
 router.get('/cards/names', getAllNames);
 router.get('/cards/:id', validateRequestIdParam, getCardById);
-router.post('/cards', validateRequestIdParam, validateRequestBody, schemaValidation(PokemonCardSchema), postCard);
+router.post('/cards', validateRequestBody, schemaValidation(PokemonCardSchema), postCard);
 router.put('/cards/:id', validateRequestIdParam, schemaValidation(PokemonCardSchemaUpdate), putCard);
 router.delete('/cards/:id', validateRequestIdParam, deleteCard);
-router.post('/cards/:id/attack', validateRequestIdParam, getFightResult);
+router.post('/cards/:id/attack', validateRequestIdParam, validateRequestBody, getFightResult);
 router.get('/cards/:id/weaknesses', validateRequestIdParam, getWeaknesses);
 router.get('/cards/:id/resistances', validateRequestIdParam, getResistances);
 router.get('*', notFound);
